modules/dashboards/kubernetes-dashboard/manifests/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: HostRegexp(`kubernetes-dashboard.{suffix:.*}`)
    services:
    - kind: Service
      name: kubernetes-dashboard
      port: 80
  tls: {}
